k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /records
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
